@@ -25,11 +25,13 @@ from otopi import util
 
 
 from . import packages
+from . import nrpe
 
 
 @util.export
 def createPlugins(context):
     packages.Plugin(context=context)
+    nrpe.Plugin(context=context)
 
 
 # vim: expandtab tabstop=4 shiftwidth=4
