@@ -1,0 +1,135 @@
+#
+# ovirt-host-deploy -- ovirt host deployer
+# Copyright (C) 2012-2014 Red Hat, Inc.
+#
+# This library is free software; you can redistribute it and/or
+# modify it under the terms of the GNU Lesser General Public
+# License as published by the Free Software Foundation; either
+# version 2.1 of the License, or (at your option) any later version.
+#
+# This library is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# Lesser General Public License for more details.
+#
+# You should have received a copy of the GNU Lesser General Public
+# License along with this library; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+#
+
+
+"""gluster nrpe plugin."""
+
+import os
+import re
+import gettext
+_ = lambda m: gettext.dgettext(message=m, domain='ovirt-host-deploy')
+
+
+from otopi import util
+from otopi import plugin
+from otopi import constants as otopicons
+from otopi import filetransaction
+
+
+from ovirt_host_deploy import constants as odeploycons
+
+
+@util.export
+class Plugin(plugin.PluginBase):
+    """
+    # sample nrpe config file format
+    # comment
+    key1=value1
+    key2=value2 # comment
+    key3=
+    key4= #comment
+    #key5=value5
+    allowed_hosts=
+    allowed_hosts=a,b,c
+    allowed_hosts=d,a,b,c
+    """
+    _RE_KEY_VALUE = re.compile(
+        flags=re.VERBOSE,
+        pattern=r"""
+            ^
+            \s*
+            (?P<key>\w+)
+            \s*
+            =
+            \s*
+            (?P<value>[^#]*)
+            ([#].*)?
+            $
+        """,
+    )
+
+    def _getNewFileContent(self, content, server):
+        newcontent = []
+        for line in content:
+            m = self._RE_KEY_VALUE.match(line)
+            if m is not None and m.group('key') == 'allowed_hosts':
+                s = set(
+                    [
+                        e.strip() for e in m.group('value').split(',')
+                        if e.strip()
+                    ]
+                )
+                if server not in s:
+                    s.add(server)
+                    line = 'allowed_hosts=%s' % ','.join(sorted(s))
+            newcontent.append(line)
+        return newcontent
+
+    def __init__(self, context):
+        super(Plugin, self).__init__(context=context)
+
+    @plugin.event(
+        stage=plugin.Stages.STAGE_INIT,
+    )
+    def _setup(self):
+        self.environment.setdefault(
+            odeploycons.GlusterEnv.MONITORING_ENABLE,
+            False
+        )
+        self.environment.setdefault(
+            odeploycons.GlusterEnv.MONITORING_SERVER,
+            None
+        )
+
+    @plugin.event(
+        stage=plugin.Stages.STAGE_MISC,
+        condition=lambda self: (
+            self.environment[
+                odeploycons.GlusterEnv.MONITORING_ENABLE
+            ] and
+            self.environment[
+                odeploycons.GlusterEnv.MONITORING_SERVER
+            ] is not None and
+            os.path.exists(odeploycons.FileLocations.NRPE_CONFIG_FILE)
+        ),
+    )
+    def _misc(self):
+        with open(odeploycons.FileLocations.NRPE_CONFIG_FILE, 'r') as f:
+            content = f.read().splitlines()
+        newcontent = self._getNewFileContent(
+            content,
+            self.environment[
+                odeploycons.GlusterEnv.MONITORING_SERVER
+            ]
+        )
+        if content != newcontent:
+            self.environment[
+                otopicons.CoreEnv.MAIN_TRANSACTION
+            ].append(
+                filetransaction.FileTransaction(
+                    name=odeploycons.FileLocations.NRPE_CONFIG_FILE,
+                    content=newcontent,
+                    modifiedList=self.environment[
+                        otopicons.CoreEnv.MODIFIED_FILES
+                    ],
+                )
+            )
+
+
+# vim: expandtab tabstop=4 shiftwidth=4
